@@ -1,5 +1,6 @@
 3 Dec 2013: Wouter
 	- Fix sldns to use sldns_ prefix for all ldns_ variables.
+	- Fix windows compile to compile with sldns.
 
 30 Nov 2013: Wouter
 	- Fix sldns to make globals use sldns_ prefix.  This fixes
